# side-python-projects

./: .replit  pyproject.toml  save.json
faceRecognition/: opencvfaceorobjectrecognition.py
faceRecognition/haarcascades/: mouth.xml
fractal-triangle/: main.py
genetic-algorithm/: main.py
neural-network/: data.py  main.py
neural-network-genetic-algorythm/: main.py  save.json
